--- a/Front - Proyecto/src/Administrativo/CRUD'S/output.css
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/output.css
@@ -596,10 +596,6 @@ video {
   right: 0.75rem;
 }
 
-.right-\[25rem\] {
-  right: 25rem;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -610,10 +606,6 @@ video {
 
 .top-12 {
   top: 3rem;
-}
-
-.top-24 {
-  top: 6rem;
 }
 
 .top-28 {
@@ -644,10 +636,6 @@ video {
   top: 14px;
 }
 
-.top-\[3\.6rem\] {
-  top: 3.6rem;
-}
-
 .top-\[3rem\] {
   top: 3rem;
 }
@@ -658,10 +646,6 @@ video {
 
 .top-\[4rem\] {
   top: 4rem;
-}
-
-.top-\[6\.5rem\] {
-  top: 6.5rem;
 }
 
 .z-10 {
@@ -761,6 +745,14 @@ video {
   margin-top: -0.75rem;
 }
 
+.-mt-5 {
+  margin-top: -1.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -837,12 +829,20 @@ video {
   margin-left: 1.5rem;
 }
 
+.ml-60 {
+  margin-left: 15rem;
+}
+
 .ml-7 {
   margin-left: 1.75rem;
 }
 
 .ml-8 {
   margin-left: 2rem;
+}
+
+.ml-80 {
+  margin-left: 20rem;
 }
 
 .ml-9 {
@@ -895,10 +895,6 @@ video {
 
 .mr-8 {
   margin-right: 2rem;
-}
-
-.mr-\[10rem\] {
-  margin-right: 10rem;
 }
 
 .mt-0 {
@@ -981,6 +977,10 @@ video {
   margin-top: 9.6rem;
 }
 
+.ml-\[1px\] {
+  margin-left: 1px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -999,10 +999,6 @@ video {
 
 .table {
   display: table;
-}
-
-.table-row {
-  display: table-row;
 }
 
 .grid {
@@ -1089,6 +1085,10 @@ video {
   height: 23px;
 }
 
+.h-\[24rem\] {
+  height: 24rem;
+}
+
 .h-\[28rem\] {
   height: 28rem;
 }
@@ -1125,14 +1125,6 @@ video {
   height: 100vh;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-auto {
-  height: auto;
-}
-
 .max-h-\[220px\] {
   max-height: 220px;
 }
@@ -1157,20 +1149,8 @@ video {
   min-height: 100vh;
 }
 
-.min-h-\[\] {
-  min-height: ;
-}
-
-.min-h-\[2rem\] {
-  min-height: 2rem;
-}
-
-.min-h-\[4rem\] {
-  min-height: 4rem;
-}
-
-.min-h-\[5rem\] {
-  min-height: 5rem;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-10 {
@@ -1179,6 +1159,10 @@ video {
 
 .w-11\/12 {
   width: 91.666667%;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-14 {
@@ -1325,28 +1309,12 @@ video {
   width: 100vw;
 }
 
-.w-\[\] {
-  width: ;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
-.w-\[80px\] {
-  width: 80px;
+.w-\[15px\] {
+  width: 15px;
 }
 
 .min-w-full {
   min-width: 100%;
-}
-
-.min-w-\[\] {
-  min-width: ;
-}
-
-.min-w-60 {
-  min-width: 15rem;
 }
 
 .max-w-40 {
@@ -1365,32 +1333,12 @@ video {
   max-width: 40rem;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
 .max-w-none {
   max-width: none;
-}
-
-.max-w-96 {
-  max-width: 24rem;
-}
-
-.max-w-8 {
-  max-width: 2rem;
-}
-
-.max-w-80 {
-  max-width: 20rem;
-}
-
-.max-w-60 {
-  max-width: 15rem;
-}
-
-.max-w-56 {
-  max-width: 14rem;
-}
-
-.max-w-52 {
-  max-width: 13rem;
 }
 
 .border-collapse {
@@ -1413,8 +1361,16 @@ video {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1429,8 +1385,20 @@ video {
   justify-content: space-around;
 }
 
+.justify-stretch {
+  justify-content: stretch;
+}
+
 .gap-1 {
   gap: 0.25rem;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .overflow-auto {
@@ -1459,18 +1427,6 @@ video {
   white-space: break-spaces;
 }
 
-.text-balance {
-  text-wrap: balance;
-}
-
-.break-words {
-  overflow-wrap: break-word;
-}
-
-.break-all {
-  word-break: break-all;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1497,10 +1453,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .rounded-xl {
@@ -1625,6 +1577,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
@@ -1633,6 +1590,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-15 {
+  --tw-bg-opacity: 0.15;
 }
 
 .bg-opacity-50 {
@@ -1668,8 +1629,17 @@ video {
   padding: 1rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-\[0\.5\] {
   padding: 0.5;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -1712,6 +1682,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1730,6 +1705,10 @@ video {
 
 .text-justify {
   text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1784,6 +1763,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1795,6 +1779,14 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
 }
 
 .text-\[\#241111\] {
@@ -1817,9 +1809,18 @@ video {
   color: rgb(84 81 81 / var(--tw-text-opacity));
 }
 
+.text-\[\#57D7B4F0\] {
+  color: #57D7B4F0;
+}
+
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .text-gray-400 {
@@ -1851,6 +1852,34 @@ video {
   text-decoration-line: underline;
 }
 
+.placeholder-white::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-white::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-opacity-\[0\.75\]::-moz-placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.placeholder-opacity-\[0\.75\]::placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1859,11 +1888,6 @@ video {
 
 .outline {
   outline-style: solid;
-}
-
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .placeholder\:text-white::-moz-placeholder {
@@ -1876,6 +1900,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:bg-\[\#205748\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 87 72 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#2e5c5c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(46 92 92 / var(--tw-bg-opacity));
@@ -1884,6 +1913,11 @@ video {
 .hover\:bg-\[\#47917c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 145 124 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#5e9f9f\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 159 159 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#7EBBAA\]:hover {
@@ -1910,9 +1944,18 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-transparent:hover {
+  background-color: transparent;
+}
+
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#c6d7d2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(198 215 210 / var(--tw-text-opacity));
 }
 
 .hover\:text-\[\#defdfb\]:hover {
@@ -1939,13 +1982,22 @@ video {
   background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
+.active\:bg-\[\#50a48c\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 164 140 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:ml-\[22rem\] {
+    margin-left: 22rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
 
-  .sm\:min-h-\[50rem\] {
-    min-height: 50rem;
+  .sm\:min-h-\[38rem\] {
+    min-height: 38rem;
   }
 
   .sm\:w-9\/12 {
@@ -2054,8 +2106,16 @@ video {
     max-height: 350px;
   }
 
+  .md\:max-h-\[36rem\] {
+    max-height: 36rem;
+  }
+
   .md\:max-h-\[40rem\] {
     max-height: 40rem;
+  }
+
+  .md\:min-h-\[35rem\] {
+    min-height: 35rem;
   }
 
   .md\:min-h-\[36rem\] {
@@ -2133,6 +2193,11 @@ video {
     padding-left: 0.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:text-\[14px\] {
     font-size: 14px;
   }
@@ -2144,6 +2209,16 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
@@ -2260,6 +2335,10 @@ video {
     margin-top: 4px;
   }
 
+  .lg\:ml-\[22rem\] {
+    margin-left: 22rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -2344,6 +2423,14 @@ video {
     width: 90%;
   }
 
+  .lg\:w-\[20rem\] {
+    width: 20rem;
+  }
+
+  .lg\:w-\[22rem\] {
+    width: 22rem;
+  }
+
   .lg\:min-w-\[20rem\] {
     min-width: 20rem;
   }
@@ -2403,6 +2490,11 @@ video {
     padding-left: 1.25rem;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-\[1\.6rem\] {
     font-size: 1.6rem;
   }
@@ -2418,6 +2510,16 @@ video {
   .lg\:text-\[16px\] {
     font-size: 16px;
   }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2427,6 +2529,10 @@ video {
 
   .xl\:ml-10 {
     margin-left: 2.5rem;
+  }
+
+  .xl\:ml-2 {
+    margin-left: 0.5rem;
   }
 
   .xl\:ml-3 {
@@ -2463,6 +2569,10 @@ video {
 
   .xl\:mr-10 {
     margin-right: 2.5rem;
+  }
+
+  .xl\:mr-2 {
+    margin-right: 0.5rem;
   }
 
   .xl\:mt-12 {
