--- a/Front - Proyecto/src/output.css
+++ b/Front - Proyecto/src/output.css
@@ -608,10 +608,6 @@ video {
   top: 3rem;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
 .top-28 {
   top: 7rem;
 }
@@ -622,10 +618,6 @@ video {
 
 .top-36 {
   top: 9rem;
-}
-
-.top-44 {
-  top: 11rem;
 }
 
 .top-48 {
@@ -644,10 +636,6 @@ video {
   top: 14px;
 }
 
-.top-\[3\.6rem\] {
-  top: 3.6rem;
-}
-
 .top-\[3rem\] {
   top: 3rem;
 }
@@ -658,50 +646,6 @@ video {
 
 .top-\[4rem\] {
   top: 4rem;
-}
-
-.top-40 {
-  top: 10rem;
-}
-
-.top-52 {
-  top: 13rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-56 {
-  top: 14rem;
-}
-
-.top-64 {
-  top: 16rem;
-}
-
-.top-80 {
-  top: 20rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[13rem\] {
-  top: 13rem;
-}
-
-.top-\[12rem\] {
-  top: 12rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-96 {
-  top: 24rem;
 }
 
 .z-10 {
@@ -805,6 +749,10 @@ video {
   margin-top: -1.25rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -883,6 +831,10 @@ video {
 
 .ml-7 {
   margin-left: 1.75rem;
+}
+
+.ml-72 {
+  margin-left: 18rem;
 }
 
 .ml-8 {
@@ -1023,6 +975,42 @@ video {
 
 .mt-\[9\.6rem\] {
   margin-top: 9.6rem;
+}
+
+.-mr-32 {
+  margin-right: -8rem;
+}
+
+.-mr-56 {
+  margin-right: -14rem;
+}
+
+.ml-\[22rem\] {
+  margin-left: 22rem;
+}
+
+.ml-\[\] {
+  margin-left: ;
+}
+
+.ml-\[18rem\] {
+  margin-left: 18rem;
+}
+
+.ml-\[17rem\] {
+  margin-left: 17rem;
+}
+
+.ml-\[16rem\] {
+  margin-left: 16rem;
+}
+
+.ml-64 {
+  margin-left: 16rem;
+}
+
+.ml-60 {
+  margin-left: 15rem;
 }
 
 .box-border {
@@ -1195,6 +1183,10 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-10 {
@@ -1377,6 +1369,10 @@ video {
   max-width: 40rem;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
 .max-w-none {
   max-width: none;
 }
@@ -1399,6 +1395,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1609,6 +1609,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
@@ -1617,6 +1622,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-15 {
+  --tw-bg-opacity: 0.15;
 }
 
 .bg-opacity-50 {
@@ -1652,8 +1661,17 @@ video {
   padding: 1rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-\[0\.5\] {
   padding: 0.5;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-2 {
@@ -1696,6 +1714,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1714,6 +1737,10 @@ video {
 
 .text-justify {
   text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1768,6 +1795,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1779,6 +1811,14 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
 }
 
 .text-\[\#241111\] {
@@ -1799,6 +1839,10 @@ video {
 .text-\[\#545151\] {
   --tw-text-opacity: 1;
   color: rgb(84 81 81 / var(--tw-text-opacity));
+}
+
+.text-\[\#57D7B4F0\] {
+  color: #57D7B4F0;
 }
 
 .text-\[\#FFFFFF\] {
@@ -1838,6 +1882,34 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.placeholder-white::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-white::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-opacity-\[0\.75\]::-moz-placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.placeholder-opacity-\[0\.75\]::placeholder {
+  --tw-placeholder-opacity: 0.75;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md {
@@ -1880,6 +1952,11 @@ video {
   background-color: rgb(71 145 124 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#69a4a4\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(105 164 164 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#7EBBAA\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(126 187 170 / var(--tw-bg-opacity));
@@ -1904,9 +1981,28 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-transparent:hover {
+  background-color: transparent;
+}
+
+.hover\:bg-\[\#72c4c4\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(114 196 196 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#5e9f9f\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 159 159 / var(--tw-bg-opacity));
+}
+
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#c6d7d2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(198 215 210 / var(--tw-text-opacity));
 }
 
 .hover\:text-\[\#defdfb\]:hover {
@@ -1933,7 +2029,44 @@ video {
   background-color: rgb(75 146 126 / var(--tw-bg-opacity));
 }
 
+.active\:bg-\[\#50a48c\]:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 164 140 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 640px) {
+  .sm\:ml-80 {
+    margin-left: 20rem;
+  }
+
+  .sm\:ml-\[21rem\] {
+    margin-left: 21rem;
+  }
+
+  .sm\:ml-\[25rem\] {
+    margin-left: 25rem;
+  }
+
+  .sm\:ml-64 {
+    margin-left: 16rem;
+  }
+
+  .sm\:ml-72 {
+    margin-left: 18rem;
+  }
+
+  .sm\:mr-72 {
+    margin-right: 18rem;
+  }
+
+  .sm\:mr-20 {
+    margin-right: 5rem;
+  }
+
+  .sm\:ml-\[22rem\] {
+    margin-left: 22rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -2127,6 +2260,11 @@ video {
     padding-left: 0.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:text-\[14px\] {
     font-size: 14px;
   }
@@ -2138,6 +2276,16 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
@@ -2397,6 +2545,11 @@ video {
     padding-left: 1.25rem;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-\[1\.6rem\] {
     font-size: 1.6rem;
   }
@@ -2411,6 +2564,16 @@ video {
 
   .lg\:text-\[16px\] {
     font-size: 16px;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
